Compress canvas to prevent scrollbars
No scrollbars, but the entire window isn't filled

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html {
+    margin: 0; padding: 0;
+}
+
 body {
     background:#09132E;
+    margin: 0; padding: 0;
+}
+
+canvas {
+    width: 100%; height: 100%;
+    margin: 0; padding: 0;
 }
